# budgify-backend

./: Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
app_template/: repository.py  urls.py  views.py
bugdify/: asgi.py  settings.py  urls.py  wsgi.py
bugdify/auth/: apps.py  authentication.py  blacklist_cache.py  repository.py  urls.py  validators.py  views.py
bugdify/core/: apps.py
bugdify/core/helpers/: generate_secrets.py  sql.py
bugdify/core/management/commands/: newapp.py
bugdify/users/: repository.py  urls.py  views.py
utils/: db_utils.py
